# haskell-ssi

./: README.md  ssi.cabal  stack.yaml
src/: FakeWreq.hs  Heredoc.hs  Main.hs
