name:                ssi
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/benizi/haskell-ssi
license:             MIT
license-file:        LICENSE
author:              Benjamin R. Haskell
-- maintainer:
copyright:           2017
-- category:
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ssi
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring == 0.10.*
                     , containers == 0.5.*
                     , data-default == 0.7.*
                     , directory == 1.3.*
                     , filepath == 1.4.*
                     , lens == 4.15.*
                     , megaparsec == 5.2.*
                     , mtl == 2.2.*
                     , tagsoup == 0.14.*
                     , template-haskell == 2.11.*
                     , time == 1.6.*
                     , wreq == 0.5.*
  ghc-options:         -Wall
